--- a/_config.yml
+++ b/_config.yml
@@ -107,11 +107,11 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Name"
+  name             : "Taeyoung Kwak"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "I am an **amazing** person."
-  location         : "Somewhere"
-  email            :
+  bio              : "Undergraduate Student in KR"
+  location         : "South Korea"
+  email            : "astro.kwak@gmail.com"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
