--- a/_config.yml
+++ b/_config.yml
@@ -62,12 +62,11 @@ navigation_footer:
 # Collections
 collections:
   posts:
-    title: Posts Title goes here
+    title: Blog
     output: true
-    description: "My thoughts and ideas desc"
-    feature_text: |
-      Welcome to my blog ggg
-    feature_image: "https://picsum.photos/2560/600?image=865"
+    # description: "Blog desc"
+    # feature_text: Welcome to my blog ggg
+    # feature_image: "https://picsum.photos/2560/600?image=865"
 
 social_links: # Appears in sidebar. Set the urls then uncomment and comment out as desired
   LinkedIn: https://www.linkedin.com/in/taeyoung-kwak-561a5b161/
