--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ navigation_header:
 # Footer nav
 navigation_footer:
   - title: Back to top
-    url: '#top'
+    # url: '#top'
 
 # Collections
 collections:
